# hass_inspirair

./: .commitlintrc.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTE.md  README.md  config.ini  docker-compose.yml  environment.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pages.yaml  pre-commit.yml  pypi.yaml  release.ini  release.yaml  test.yaml
docs/: conf.py  config-ini.md  config.md  index.md
docs/_static/css/: mermaid.css
docs/tutorial/: .gitattributes  README.md  hass-inspirair.service  index.md
ha_aldes/: __main__.py  config.py  env_config.py  main.py  mqtt.py
ha_aldes/ha/: devices.py  model.py  models.py
ha_aldes/i18n/: __init__.py  ha_aldes.pot
ha_aldes/i18n/de/LC_MESSAGES/: ha_aldes.mo  ha_aldes.po
ha_aldes/i18n/en/LC_MESSAGES/: ha_aldes.mo  ha_aldes.po
ha_aldes/modbus/: client.py  model.py
ha_aldes/mqtt/: actions.py  client.py
hass_inspirair/: __main__.py  config.py  env_config.py  main.py
hass_inspirair/ha/: devices.py  model.py
hass_inspirair/i18n/: __init__.py  hass_inspirair.pot
hass_inspirair/i18n/de/LC_MESSAGES/: hass_inspirair.mo  hass_inspirair.po
hass_inspirair/i18n/en/LC_MESSAGES/: hass_inspirair.mo  hass_inspirair.po
hass_inspirair/modbus/: client.py  model.py
hass_inspirair/mqtt/: actions.py  client.py
tests/: conftest.py
tests/e2e/: register-test.tavern.yaml
tests/modbus/: client.py  setup.json  test_modbus_poll.py  test_model.py
tests/modbus/model/: test_model.py
