[tool.poetry]
name = "ha_aldes"
version = "0.0.1"
description = ""
authors = ["Kraus, Vadim <38394456+VadimKraus@users.noreply.github.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "ha_aldes"}]

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"
pymodbus = {version = "^3.6.2", extras = ["serial"]}


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest = "^7.4.3"
babel = "^2.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
