[tool.poetry]
name = "hass_inspirair"
version = "0.1.1"
description = ""
authors = ["Kraus, Vadim <38394456+VadimKraus@users.noreply.github.com>"]
license = "Apache Software License"
readme = "README.md"
homepage = "https://github.com/The-Smartest-Home/hass_inspirair"
repository = "https://github.com/The-Smartest-Home/hass_inspirair"
documentation = "https://github.com/The-Smartest-Home/hass_inspirair"
classifiers = [
    "Development Status :: 4 - Beta",
]
packages = [{include = "hass_inspirair"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pymodbus = {version = "^3.6.2", extras = ["serial"]}
paho-mqtt = "^1.6.1"
pydantic = "^2.5.3"
aiomqtt = "^1.2.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest = "^7.4.3"
babel = "^2.14.0"
python-semantic-release = "^9.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true


[tool.ruff]
# Never enforce `E501` (line length violations), as this is handled by black
ignore = ["E501"]
line-length = 100 # sync with black

[tool.pydantic-mypy]
init_forbid_extra = true
#init_typed = true
#warn_required_dynamic_aliases = true
