[tool.poetry]
name = "hass_inspirair"
version = "0.5.0"
description = ""
authors = ["Kraus, Vadim <38394456+VadimKraus@users.noreply.github.com>"]
license = "OSI Approved :: Apache Software License"
readme = "README.md"
homepage = "https://the-smartest-home.github.io/hass_inspirair/"
repository = "https://github.com/The-Smartest-Home/hass_inspirair"
documentation = "https://the-smartest-home.github.io/hass_inspirair/"
classifiers = [
    "Development Status :: 4 - Beta",
]
packages = [{include = "hass_inspirair"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pymodbus = {version = "^3.7.4", extras = ["serial"]}
pydantic = "^2.9.2"
aiomqtt = "^2.0.0"

[tool.poetry.scripts]
ha-inspirair = 'hass_inspirair.__main__:main'

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = ">=7.2,<9.0.0"
babel = "^2.16.0"
python-semantic-release = "^9.12.0"
sphinx = "^7.2.6"
furo = "^2024.8.6"
myst-parser = "^3.0.1"
sphinx-copybutton = "^0.5.2"
sphinxcontrib-mermaid = "^0.9.2"
tavern = "^2.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true


[tool.ruff]
# Never enforce `E501` (line length violations), as this is handled by black
ignore = ["E501"]
line-length = 100 # sync with black

[tool.pydantic-mypy]
init_forbid_extra = true
#init_typed = true
#warn_required_dynamic_aliases = true
